# dcf

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: NLS.txt  NLS_alpha.txt  alpha.txt  high.txt  neg.txt  neg_CPP.txt  neg_efficiency.txt  neg_membind.txt  pos_CPP.txt  pos_membind.txt
scripts/: benchmark.R  emsa.R  emsa_1_1.csv  emsa_1_4.csv  geany_run_script.sh  install_scripts  libgc.R  mics.R  mics_plate1.txt  mics_plate2.txt  pfam.R  plot_settings.R  run_all
src/: design.cxx  design.h  iztli.cxx  iztli.h  main.cxx  main.cxx~  pfam.cxx  pfam.h  predict.cxx  prop.cxx  split.cxx  sys_config.h.in  tests.cxx  trainer.cxx  trainer.h
src/alglib/: CMakeLists.txt  dataanalysis.cpp  dataanalysis.h
